=============================================================================
Release Notes Puzzle OKR
=============================================================================

Version     Neuerungen
-----------------------------------------------------------------------------
WIP         - Erweiterung #863: Kommentar der beim Abschliessen eines Objectives erfasst wurde, wird von nun an in der Detailansicht des Objectives angezeigt
            - Erweiterung #925: In der Check-in history wird nun angezeigt, wer das Check-in erfasst hat
            - Erweiterung #888: Beim Check-in erstellen können nun neue Actions zum Actionplan hinzugefügt werden
            - Erweiterung #1128: Löschen eines Objectives ist nun auch über das Drei-Punkte-Menü möglich
            - Erweiterung #614: Beim Duplizieren kann ausgewählt werden, welche Key Results dupliziert werden sollen
            - Erweiterung #1204: Die Demo- und Stagingumgebung sind nun visuell voneinander unterscheidbar und haben konfigurierbare Styles
            - Erweiterung #937: Feld das den Wert eines ordinalen Check-ins festhält von "value" auf "zone" umbenannt
            - Erweiterung #1224: Roboto Flex als Schriftart gesetzt
            - Erweiterung #623: Den Header auf der mobilen Ansicht schöner gestaltet und erweitert
            - Erweiterung #710: Die URL auf die Hilfeseite pro Umgebung individuell konfigurierbar gemacht
            - Erweiterung #931: Das Löschen von eingeladenen Members ist nun möglich
            - Erweiterung #1070: Update von Angular auf V19
            - Erweiterung #1135: Neuen Formatter für Front- und Backend implementiert
            - Erweiterung #987: Workflow auf Github erstellt, der die Demo-Pods zurücksetzt
            - Erweiterung #923: E2E-Tests schöner geschrieben und ihre Laufzeit auf der pipeline verkürzt
            - Erweiterung #1009: Deserializer aufgeräumt
            - Erweiterung #1183: Pipeline implementiert, die automatisch auf SonarQube pusht